tests/fixtures/fail/god-object.ts
// God object smell — oversized class with many methods

export class MegaService {
  method1(): void { console.log(1); }
  method2(): void { console.log(2); }
  method3(): void { console.log(3); }
  method4(): void { console.log(4); }
  method5(): void { console.log(5); }
  method6(): void { console.log(6); }
  method7(): void { console.log(7); }
  method8(): void { console.log(8); }
  method9(): void { console.log(9); }
  method10(): void { console.log(10); }
  method11(): void { console.log(11); }
  method12(): void { console.log(12); }
  method13(): void { console.log(13); }
  method14(): void { console.log(14); }
  method15(): void { console.log(15); }
  method16(): void { console.log(16); }
}
